# reppy-fastapi

./: .gitignore  DEPLOYMENT.md  DEVELOPER_GUIDE.md  Dockerfile  Dockerfile.dev  EXAMPLES_GUIDE.md  LLM_ROUTER_GUIDE.md  Makefile  PROJECT_SUMMARY.md  QDRANT_SETUP.md  QUICKSTART.md  README.codex.md  README.md  ddl.sql  docker-compose.yml  env.example  func.yaml  main.py  pyproject.toml  pytest.ini  requirements.txt  sample_payload.json
.github/workflows/: workflow.yml
app/: main.py
app/api/v1/: api.py
app/api/v1/endpoints/: rag.py
app/core/: config.py  lifespan.py  state.py
app/rag/: chain.py  llm.py  prompts.py  retriever.py  schemas.py
app/reppy/: chains.py  endpoints.py  prompts.py  schemas.py
examples/: __init__.py  api_client_example.py  llm_router_demo.py  sample_generate_request.json  sample_request.json  sample_update_request.json  test_basic.py  test_llm_router.py  test_router.py  usage_example.py
prompts/: action_routing.yaml  chat_planner.yaml  chat_response.yaml  generate_program.yaml  generate_routine.yaml  intent_routing.yaml  update_routine.yaml
src/: __init__.py  api.py  app.py  worker.py
src/api/: __init__.py  routers.py
src/common/: __init__.py  action_router.py  action_router_llm.py  agent_builder.py  clients.py  executor.py  express_client.py  lcel_pipeline.py  models.py  orchestrator.py  rag_retriever.py  tools.py
src/common/agents/: __init__.py  executor.py
src/common/pipeline/: __init__.py  lcel.py  router.py
src/common/tools/: __init__.py  implementations.py
src/common/utils/: __init__.py  observability.py  prompts.py  validation.py
src/config/: __init__.py  baseconfig.py  settings.py
src/consumer/: __init__.py  lambda_handler.py  oci_handler.py
src/context/: __init__.py
src/context/adapters/: __init__.py  aggregator.py  qdrant_adapter.py  vm_client.py
src/context/ports/: __init__.py  interfaces.py
src/contracts/: __init__.py  messages.py  schemas.py
src/emit/: __init__.py  oci_streaming.py  ports.py  result_queue.py
src/entrypoints/: __init__.py  local_runner.py  oci_function.py
src/infra/: __init__.py  express_client.py  qdrant_client.py
src/llm/: __init__.py  gemini.py
src/pipelines/: __init__.py  chat_pipeline.py  generate_pipeline.py  orchestrator.py  router.py  update_pipeline.py
src/utils/: __init__.py  logging.py  prompt_loader.py
src/worker/: __init__.py
src/worker/config/: __init__.py  settings.py
src/worker/context/: __init__.py  aggregator.py
src/worker/context/adapters/: __init__.py  qdrant_adapter.py  vm_internal_api.py
src/worker/context/ports/: __init__.py  context_port.py  idempotency_port.py  vector_port.py
src/worker/contracts/: __init__.py  messages.py  schemas.py
src/worker/emit/: __init__.py
src/worker/emit/adapters/: __init__.py  oci_queue.py  oci_streaming.py
src/worker/emit/ports/: __init__.py  result_queue_port.py  token_stream_port.py
src/worker/entrypoints/: __init__.py  local_runner.py  oci_function.py
src/worker/llm/: __init__.py  gemini_client.py  prompt_loader.py  structured_output.py
src/worker/pipelines/: __init__.py  base.py  chat_pipeline.py  generate_pipeline.py  orchestrator.py  update_pipeline.py
src/worker/utils/: __init__.py  logging_config.py
tests/: __init__.py  conftest.py  test_express_client.py  test_llm_router.py  test_planner_context.py  test_planner_mapping.py  test_prompts.py  test_qdrant_client.py  test_retriever.py  test_router.py  test_schemas.py  test_validation.py
